--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "web-ext": "^6.8.0",
     "webext-bridge": "^5.0.4",
     "webextension-polyfill": "^0.9.0"
+  },
+  "dependencies": {
+    "vue-router": "^4.0.16"
   }
 }
