--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^17.0.25",
     "@types/webextension-polyfill": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "5.0.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.33",
     "@vue/test-utils": "^2.0.0-rc.20",
@@ -54,7 +55,6 @@
     "vitest": "^0.9.3",
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
-    "web-ext": "^6.8.0",
     "webext-bridge": "^5.0.4",
     "webextension-polyfill": "^0.9.0"
   },
