feat: 需要的消息通信验证通过

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
     "pinia",
-    "Vitesse"
+    "Vitesse",
+    "webext",
+    "windi"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "volar.tsPlugin": true,
