--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webextension-polyfill": "^0.9.0"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.193",
     "pinia": "^2.0.18",
     "vue-router": "4"
   }
