--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:js": "npm run build:js -- --mode development",
     "dev:inject": "npm run build:inject -- --mode development",
     "dev:bg": "tsup --watch ./src",
-    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:js build:bg",
+    "build": "cross-env NODE_ENV=production run-s clear build:web build:prepare build:js build:bg build:inject",
     "build:prepare": "esno scripts/prepare.ts",
     "build:web": "vite build",
     "build:js": "vite build --config vite.config.content.ts",
@@ -66,6 +66,8 @@
   },
   "dependencies": {
     "@types/chrome": "^0.0.193",
+    "ant-design-vue": "^3.2.12",
+    "less": "^4.1.3",
     "pinia": "^2.0.18",
     "vue-router": "4"
   }
