--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vitest": "^0.9.3",
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
+    "web-ext": "^7.1.1",
     "webext-bridge": "^5.0.4",
     "webextension-polyfill": "^0.9.0"
   },
