--- a/package.json
+++ b/package.json
@@ -66,9 +66,13 @@
   },
   "dependencies": {
     "@types/chrome": "^0.0.193",
+    "@types/jquery": "^3.5.14",
     "ant-design-vue": "^3.2.12",
+    "jquery": "^3.6.1",
     "less": "^4.1.3",
     "pinia": "^2.0.18",
+    "socket.io-client": "^4.5.3",
+    "uuid": "^9.0.0",
     "vue-router": "4"
   }
 }
